Fix weird spacing for committees on mobile

--- a/client/src/components/clubs/club-popup.scss
+++ b/client/src/components/clubs/club-popup.scss
@@ -190,8 +190,8 @@
         font-size: 1.25rem;
     }
 
-    .club-popup-committees {
-        display: flex;
+    .club-popup-committees-list {
+        display: flex !important;
         flex-direction: column;
         align-items: center;
     }
